Opened 2 months ago

Closed 2 months ago

#19259 closed bug (fixed)

[kernel] PANIC: _mutex_lock(): double lock of 0xffffffff8c072db0 by thread 49

Reported by: diver Owned by: nobody
Priority: normal Milestone: R1/beta6
Component: System/Kernel Version: R1/beta5
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Updated from hrev58330 to hrev58344 in VMware Workstation 17.6.1 and now it crashes on boot:

KERN: PANIC: _mutex_lock(): double lock of 0xffffffff8c072db0 by thread 49
KERN: Welcome to Kernel Debugging Land...
KERN: Thread 49 "mount_server" running on CPU 0
KERN: stack trace for thread 49 "mount_server"
KERN:     kernel stack: 0xffffffff81a41000 to 0xffffffff81a46000
KERN:       user stack: 0x00007f799e840000 to 0x00007f799f840000
KERN: frame                       caller             <image>:function + offset
KERN:  0 ffffffff81a45490 (+  32) ffffffff801526b0   <kernel_x86_64> arch_debug_call_with_fault_handler + 0x1a
KERN:  1 ffffffff81a454e0 (+  80) ffffffff800b8388   <kernel_x86_64> debug_call_with_fault_handler + 0x78
KERN:  2 ffffffff81a45540 (+  96) ffffffff800b9a74   <kernel_x86_64> kernel_debugger_loop(char const*, char const*, __va_list_tag*, int) + 0xf4
KERN:  3 ffffffff81a45590 (+  80) ffffffff800b9e0e   <kernel_x86_64> kernel_debugger_internal(char const*, char const*, __va_list_tag*, int) + 0x6e
KERN:  4 ffffffff81a45680 (+ 240) ffffffff800ba1a7   <kernel_x86_64> panic + 0xb7
KERN:  5 ffffffff81a456d0 (+  80) ffffffff8009d671   <kernel_x86_64> _mutex_lock(mutex*, void*) + 0x281
KERN:  6 ffffffff81a45730 (+  96) ffffffff8004f5a2   <kernel_x86_64> _GLOBAL__N_1::BlockPrefetcher::IterativeIOFinishedHook(void*, IORequest*, int, bool, unsigned long) + 0x42
KERN:  7 ffffffff81a45770 (+  64) ffffffff800ff792   <kernel_x86_64> do_iterative_fd_io_finish(void*, IORequest*, int, bool, unsigned long) + 0x32
KERN:  8 ffffffff81a457f0 (+ 128) ffffffff800dcc30   <kernel_x86_64> IORequest::NotifyFinished() + 0x150
KERN:  9 ffffffff81a45870 (+ 128) ffffffff800dcc50   <kernel_x86_64> IORequest::NotifyFinished() + 0x170
KERN: 10 ffffffff81a458d0 (+  96) ffffffff800dae80   <kernel_x86_64> IOCache::ScheduleRequest(IORequest*) + 0xd0
KERN: 11 ffffffff81a45920 (+  80) ffffffff801134a6   <kernel_x86_64> vfs_vnode_io + 0x36
KERN: 12 ffffffff81a45a10 (+ 240) ffffffff8011375a   <kernel_x86_64> do_iterative_fd_io_iterate(void*, IORequest*, bool*) + 0x25a
KERN: 13 ffffffff81a45a70 (+  96) ffffffff80113b46   <kernel_x86_64> do_iterative_fd_io + 0xe6
KERN: 14 ffffffff81a45ae0 (+ 112) ffffffff80056fda   <kernel_x86_64> block_cache_prefetch + 0x5ba
KERN: 15 ffffffff81a45bb0 (+ 208) ffffffff81f725bb   <fat> dosfs_mount(fs_volume*, char const*, unsigned int, char const*, long*) + 0xeab
KERN: 16 ffffffff81a45d90 (+ 480) ffffffff80109025   <kernel_x86_64> fs_mount(char*, char const*, char const*, unsigned int, char const*, bool) + 0x805
KERN: 17 ffffffff81a45f20 (+ 400) ffffffff8011011e   <kernel_x86_64> _user_mount + 0x22e
KERN: 18 ffffffff81a45f30 (+  16) ffffffff8015428f   <kernel_x86_64> x86_64_syscall_entry + 0xfb
KERN: user iframe at 0xffffffff81a45f30 (end = 0xffffffff81a45ff8)
KERN:  rax 0x69                  rbx 0x7f799f83eea0        rcx 0xe762c59bac
KERN:  rdx 0x0                   rsi 0x1060355197d0        rdi 0x1060354c7780
KERN:  rbp 0x7f799f83ef00         r8 0x0                    r9 0x0
KERN:  r10 0x1                   r11 0x206                 r12 0x1060354d3e80
KERN:  r13 0x1                   r14 0x7f799f83ee40        r15 0x1060354c7780
KERN:  rip 0xe762c59bac          rsp 0x7f799f83ee08     rflags 0x206
KERN:  vector: 0x63, error code: 0x0
KERN: 19 00007f799f83ef00 (+   0) 000000e762c59bac   <libroot.so> _kern_mount + 0x0c
KERN: 20 00007f799f83ef20 (+  32) 0000008e78b70e85   <_APP_> MountArchivedVisitor::~MountArchivedVisitor() + 0x65
KERN: 21 00007f799f83f0a0 (+ 384) 0000008e78b721b4   <_APP_> AutoMounter::_MountVolumes(mount_mode, mount_mode, bool, int) + 0x124
KERN: 22 00007f799f83f120 (+ 128) 0000008e78b72234   <_APP_> AutoMounter::ReadyToRun() + 0x34
KERN: 23 00007f799f83f370 (+ 592) 00000052ced5b397   <libbe.so> BApplication::DispatchMessage(BMessage*, BHandler*) + 0x467
KERN: 24 00007f799f83f3c0 (+  80) 00000052ced631d4   <libbe.so> BLooper::task_looper() + 0x294
KERN: 25 00007f799f83f3e0 (+  32) 00000052ced58151   <libbe.so> BApplication::Run() + 0x21
KERN: 26 00007f799f83f660 (+ 640) 0000008e78b70c45   <_APP_> main + 0x25
KERN: 27 00007f799f83f690 (+  48) 0000008e78b70d8e   <_APP_> _start + 0x3e
KERN: 28 00007f799f83f6c0 (+  48) 00000103f03f6e95   </boot/system/runtime_loader@0x00000103f03e7000> <unknown> + 0xfe95
KERN: 29 0000000000000000 (+   0) 00007fdf85ee7258   <commpage> commpage_thread_exit + 0x00

Change History (2)

comment:1 by waddlesplash, 2 months ago

Milestone: UnscheduledR1/beta6

comment:2 by waddlesplash, 2 months ago

Resolution: fixed
Status: newclosed

Fixed in hrev58347.

Note: See TracTickets for help on using tickets.