kernel/block_cache: Cleanups and fixes to the prefetcher.

* Use do_fd_io and drop the unnecessary iteration callback.

 * Make the callback call a non-static function to avoid needing
   to fetch values.

 * Unlock the cache before calling the I/O function.

Should fix #19259.